force-app/main/default/objects/TournamentSport__c/TournamentSport__c.object-meta.xml
<CustomObject>
    <label>TournamentSport</label>
    <nameField>
        <label>TournamentSport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TournamentSports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>