force-app/main/default/objects/TournamentSport__c/fields/Sport__c.field-meta.xml
<CustomField>
    <fullName>Sport__c</fullName>
    <label>Sport</label>
    <referenceTo>Sport__c</referenceTo>
    <relationshipLabel>TournamentSports</relationshipLabel>
    <relationshipName>TournamentSports</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>