force-app/main/default/objects/TournamentSport__c/fields/Tournment__c.field-meta.xml
<CustomField>
    <fullName>Tournment__c</fullName>
    <label>Tournment</label>
    <referenceTo>Tournment__c</referenceTo>
    <relationshipLabel>TournamentSports</relationshipLabel>
    <relationshipName>TournamentSports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>